Changelog
=========

6.7.dev0 - (unreleased)
-----------------------

6.6 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

6.5 - (2015-02-25)
------------------
* Bug fix: Cleanup obsolete document_byline references
  [voineali refs #23134]

6.4 - (2014-12-23)
------------------
* Bug fix: Fixed multimedia_macros to work with Chameleon
  [voineali refs #21919]

6.3 - (2014-05-13)
------------------
* Bug fix: fixed various warning triggered on Zope startup
  [ghicaale refs #19289]

6.2 - (2013-12-10)
------------------
* Change: removed the dependecy to eea.locationwidget
  [ghicaale refs #9155]

6.1 - (2013-10-04)
------------------
* Change: removed traces of hachoir packages from eea.mediacentre
  [ichimdav refs #15651]
* Change: updated zope imports with the versions that require minimum Plone 4.1
  for eea.mediacentre
  [ichimdav refs #15651]

6.0 - (2013-09-06)
------------------

5.9 - (2013-08-30)
------------------
* Bug fix: no longer crash the viewimage browser view if we pass in an
  interface that can't adapt given context
  [ichimdav #16285]

5.8 - (2013-08-19)
------------------
* Bug fix: fixed non playback of green tips animations
  [ichimdav refs #14323]

5.7 - (2013-08-07)
------------------
* Change: removed p4a.* interface removal from eea.mediacentre in order for
  this step to be done by Products.EEAPloneAdmin
  [ichimdav #15234]

5.6 - (2013-07-25)
------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on button available
  for eea.mediacentre
  [ichimdav #15234]
* Bug fix: fixed issue when value passed to video image is of wrong format
  [ichimdav #14920]

5.5 - (2013-07-11)
------------------
* Bug fix: no longer crash if we try to pass a bad value for the video image
  file
  [ichimdav #14920]